--- a/src/app/compnents/navbar/navbar.component.css
+++ b/src/app/compnents/navbar/navbar.component.css
@@ -97,3 +97,11 @@
     z-index: 1000;
 }
 
+img{
+    width: 150px;
+    height: 100px;
+    margin-left: 20px;
+}
+img:hover{
+    transform: scale(1.05);
+}
