--- a/src/app/compnents/plant-detaill/plant-detaill.component.html
+++ b/src/app/compnents/plant-detaill/plant-detaill.component.html
@@ -1,55 +1,52 @@
 <div class="container py-4 my-4 mx-auto d-flex flex-column">
     <!-- Return Button -->
-    <a routerLink="/listePlantes"><button class="return-btn"> Return </button></a>
+    <a [routerLink]="['/listePlantes']">
+        <button class="return-btn">Return</button>
+    </a>
     <hr>
 
     <!-- Header -->
     <div class="header">
         <div class="row r1">
             <div class="col-md-9 title">
-                <h1>{{plant.name}}</h1>
+                <h1>{{ plant.name }}</h1>
             </div>
             <div class="col-md-3 text-right note">
-                <span>⭐⭐⭐⭐⭐</span> <!-- Replace with the desired star icon -->
+                <span>⭐⭐⭐⭐⭐</span>
             </div>
-            <p class="text-right category"><strong>Category :</strong> {{plant.category}}</p>
+            <p class="text-right category"><strong>Category :</strong> {{ plant.category }}</p>
         </div>
     </div>
 
     <!-- Body of the page -->
     <div class="container-body mt-4">
         <div class="row r3">
-            <!-- Plant Information -->
-            <div class="col-md-5 p-0 klo">
-                <ul>
-                    <li><strong>Personality :</strong> {{plant.personality}}</li>
-                    <li><strong>Description :</strong> {{plant.description}}</li>
-                    <li><strong>Biography :</strong> {{plant.biography}}</li>
-                    <li><strong>Watering Frequency :</strong> {{plant.watering_frequency}}</li>
-                    <li><strong>Maintenance :</strong> {{plant.entretien}}</li>
-                    <li><strong>Fun Filter :</strong> {{plant.fun_filter}}</li>
-                    <li><strong>Price :</strong> {{plant.price}} €</li>
-                    <li><strong>In Stock :</strong> {{plant.stock}} pieces</li>
-                    <li><strong>Date Added :</strong> {{plant.date_ajout}}</li>
-                    <li><strong>Lifespan :</strong> {{plant.dureeVie}}</li>
-                </ul>
-            </div>
-
             <!-- Plant Image -->
-            <div class="col-md-7">
-                <img [src]="plant.images[0]" alt="Image of {{plant.name}}">
+            <div class="col-lg-5 col-md-6 col-sm-12">
+                <img [src]="plant.images[0]" alt="Image of {{ plant.name }}">
+            </div>
+            <div class="col-lg-7 col-md-6 col-sm-12">
+               <router-outlet></router-outlet>
             </div>
         </div>
     </div>
 
-    <!-- Footer -->
+    <!-- Footer --> 
     <div class="footer d-flex flex-column mt-5">
         <div class="row r4">
-            <div class="col-md-2 myt des"><a href="#">Description</a></div>
-            <div class="col-md-2 myt"><a href="#">Comments</a></div>
-            <div class="col-md-2 mio offset-md-4"><a href="#">Add to Cart</a></div>
+            <div class="col-md-2 myt des">
+                <a [routerLink]="['description']" routerLinkActive="active">View Description</a>
+            </div>
             <div class="col-md-2 myt">
-                <button type="button" class="btn btn-outline-warning"><a href="#">Buy Now</a></button>
+                <a [routerLink]="['comments']" routerLinkActive="active">View Comments</a>
+            </div>
+            <div class="col-md-2 mio offset-md-4">
+                <a href="#">Add to Cart</a>
+            </div>
+            <div class="col-md-2 myt">
+                <button type="button" class="btn btn-outline-warning">
+                    <a href="#">Buy Now</a>
+                </button>
             </div>
         </div>
     </div>
