--- a/src/app/compnents/quiz/quiz.component.css
+++ b/src/app/compnents/quiz/quiz.component.css
@@ -5,6 +5,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    border-bottom: 10px solid #1C593A;
 }
 
 #plant-quiz {
