--- a/src/app/compnents/home/home.component.html
+++ b/src/app/compnents/home/home.component.html
@@ -71,23 +71,32 @@
 
 <!-- Explore by Category -->
 <h2 class="text-center mt-5">Explore by Category</h2>
-<div class="container row">
-    <div class="card">
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="card-inner"></div>
-    </div>
-    <div class="card">
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="card-inner"></div>
-    </div>
-    <div class="card">
-        <div class="circle"></div>
-        <div class="circle"></div>
-        <div class="card-inner"></div>
-    </div>
 
+<div class="d-flex justify-content-center row row-cols-1 row-cols-md-4">
+    <div class="col">
+        <div class="card">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="card-inner"></div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="card-inner"></div>
+        </div>
+    </div>
+    <div class="col">
+        <div class="card">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="card-inner"></div>
+        </div>
+    </div>
 </div>
 
 <h2 class="text-center mt-5">Contact Us</h2>
+<div style="width: 100%; background-color: #1C593A;">
+    <app-contact-us></app-contact-us>
+</div>
