--- a/src/app/compnents/about-us/about-us.component.html
+++ b/src/app/compnents/about-us/about-us.component.html
@@ -2,11 +2,10 @@
 <header class="text-white text-center py-5">
     <div class="container about-us-content">
         <h1 class="display-4">About Us</h1>
-        <p class="lead">Empowering students through technology and collaboration. Lorem, ipsum dolor sit amet
-            consectetur adipisicing elit. Vel iste aliquam atque, facere eveniet, quam odit repudiandae voluptatibus aut
-            repellendus numquam nisi ea nihil quo ducimus error natus ipsum saepe? Lorem ipsum dolor sit amet,
-            consectetur adipisicing elit. Corrupti commodi ea perferendis eum sit culpa consequatur. Officia, laboriosam
-            numquam libero hic eligendi id. Ad vero eveniet ipsam ipsa laborum autem.</p>
+        <p class="lead">Chez PlantBuddy, nous sommes passionnés par les plantes et la nature. Notre objectif est
+            d'offrir une expérience d'achat en ligne unique, où les utilisateurs peuvent trouver une variété de plantes
+            soigneusement sélectionnées, accompagnées de conseils pour leur entretien. Rejoignez notre communauté et
+            embellissez votre espace avec nos magnifiques plantes!</p>
         <button class="button" (click)="onContactUs()">
             <span>Contact Us!</span>
         </button>
@@ -20,17 +19,18 @@
             <div class="col-lg-7 col-md-6 entreDuGauche">
                 <h2>Who We Are</h2>
                 <p>
-                    We are the <strong>site vent en linge</strong>, Lorem ipsum dolor sit amet consectetur
-                    adipisicing
-                    elit. Cum iusto a exercitationem architecto accusantium sed voluptas necessitatibus, tempora
-                    corporis fuga, nemo impedit nihil saepe, id maxime quo corrupti excepturi iste.
+                    Nous sommes un <strong>site de vente en ligne</strong> dédié à la vente de plantes de qualité. Chez
+                    PlantBuddy, nous croyons en la puissance des plantes pour améliorer nos espaces de vie et notre
+                    bien-être. Notre équipe est passionnée par la nature et s'engage à fournir une expérience d'achat
+                    exceptionnelle, en offrant une vaste sélection de plantes, ainsi que des conseils utiles pour les
+                    entretenir.
                 </p>
                 <p>
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dolor amet, a in saepe dolores iure
-                    mollitia id! Doloremque, quas. Quaerat cum nemo iusto sequi quasi mollitia harum facere ducimus
-                    natus.
+                    Rejoignez notre communauté et découvrez comment chaque plante peut transformer votre espace en un
+                    lieu plus vivant et accueillant.
                 </p>
             </div>
+
             <div class="col-lg-5 col-md-6 entreDuDroite">
                 <img src="PlantBuddy.png" class="img-fluid rounded" alt="Our Team">
             </div>
@@ -54,35 +54,35 @@
                 <div class="col-lg-6 col-md-6 mb-4 d-flex justify-content-center align-items-center">
                     <div class="card card-dev">
                         <div class="card-photo">
-                            <img src="logo.jpg" class="img-fluid rounded" alt="Our Team"
+                            <img src="aymenMagri.jpg" class="img-fluid rounded" alt="Our Team"
                                 style="border: 2px solid #323232;">
                         </div>
-                        <div class="card-title">Aymen Magri <br>
-                            <span>Fullstack dev &amp; UX UI</span>
+                        <div class="card-title mt-4">Aymen Magri <br>
+                            <span>Étudiant en 2ème année de développement système informatique</span>
                         </div>
                         <div class="card-socials">
-                            <button class="card-socials-btn facebook">
+                            <a class="card-socials-btn facebook" href="https://www.facebook.com/profile.php?id=100018812626522" target="_blank">
                                 <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24" viewBox="0 0 24 24"
                                     id="Layer_21" height="24" data-name="Layer 21">
                                     <title></title>
                                     <path d="M16.75,9H13.5V7a1,1,0,0,1,1-1h2V3H14a4,4,0,0,0-4,4V9H8v3h2v9h3.5V12H16Z">
                                     </path>
                                 </svg>
-                            </button>
-                            <button class="card-socials-btn github">
+                            </a>
+                            <a class="card-socials-btn github" href="https://github.com/aymen8magri" target="_blank">
                                 <svg viewBox="0 0 24 24" height="33" width="33" xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z">
                                     </path>
                                 </svg>
-                            </button>
-                            <button class="card-socials-btn linkedin">
+                            </a>
+                            <a class="card-socials-btn linkedin" href="https://www.linkedin.com/in/aymen-magri-94453329b/" target="_blank">
                                 <svg height="512" viewBox="0 0 512 512" width="512" xmlns="http://www.w3.org/2000/svg">
                                     <path
                                         d="m51.326 185.85h90.011v270.872h-90.011zm45.608-130.572c-30.807 0-50.934 20.225-50.934 46.771 0 26 19.538 46.813 49.756 46.813h.574c31.396 0 50.948-20.814 50.948-46.813-.589-26.546-19.551-46.771-50.344-46.771zm265.405 124.209c-47.779 0-69.184 26.28-81.125 44.71v-38.347h-90.038c1.192 25.411 0 270.872 0 270.872h90.038v-151.274c0-8.102.589-16.174 2.958-21.978 6.519-16.174 21.333-32.923 46.182-32.923 32.602 0 45.622 24.851 45.622 61.248v144.926h90.024v-155.323c0-83.199-44.402-121.911-103.661-121.911z">
                                     </path>
                                 </svg>
-                            </button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                             <img src="logo.jpg" class="img-fluid rounded" alt="Our Team"
                                 style="border: 2px solid #323232;">
                         </div>
-                        <div class="card-title">Sara Kalai<br>
+                        <div class="card-title mt-4">Sara Kalai<br>
                             <span>Fullstack dev &amp; UX UI</span>
                         </div>
                         <div class="card-socials">
@@ -128,50 +128,48 @@
     </section>
 
     <!-- Activities Section -->
-    <section class="bg-light py-5 mt-4 mb-5">
-        <div class="container">
-            <div class="text-center mb-5">
-                <h2>What We Do</h2>
-                <p class="lead">Explore the activities that make our club special.</p>
+<section class="bg-light py-5 mt-4 mb-5">
+    <div class="container">
+        <div class="text-center mb-5">
+            <h2>What We Do</h2>
+            <p class="lead">Découvrez nos activités qui rendent PlantBuddy unique.</p>
+        </div>
+        <div class="row text-center">
+            <div class="col-md-4 mb-4">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Vente de Plantes</h5>
+                        <p class="card-text">
+                            Nous proposons une large sélection de plantes d'intérieur et d'extérieur, soigneusement
+                            choisies pour leur qualité et leur beauté.
+                        </p>
+                    </div>
+                </div>
             </div>
-            <div class="row text-center">
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100 shadow-sm">
-                        <div class="card-body">
-                            <h5 class="card-title">Workshops & Events</h5>
-                            <p class="card-text">
-                                We organize hands-on workshops on programming, web development, and Google tools,
-                                keeping
-                                students up-to-date with industry trends.
-                            </p>
-                        </div>
+            <div class="col-md-4 mb-4">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Conseils d'Entretien</h5>
+                        <p class="card-text">
+                            Notre équipe d'experts fournit des conseils utiles pour prendre soin de vos plantes et les
+                            garder en bonne santé.
+                        </p>
                     </div>
                 </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100 shadow-sm">
-                        <div class="card-body">
-                            <h5 class="card-title">Student Projects</h5>
-                            <p class="card-text">
-                                We encourage collaborative projects, like our recent platform for easy access to past
-                                exams,
-                                helping students succeed academically.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4 mb-4">
-                    <div class="card h-100 shadow-sm">
-                        <div class="card-body">
-                            <h5 class="card-title">Networking & Community</h5>
-                            <p class="card-text">
-                                We foster a community where students connect, share knowledge, and collaborate on
-                                exciting
-                                initiatives.
-                            </p>
-                        </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card h-100 shadow-sm">
+                    <div class="card-body">
+                        <h5 class="card-title">Communauté de Passionnés</h5>
+                        <p class="card-text">
+                            Rejoignez notre communauté en ligne pour partager vos expériences, poser des questions et
+                            vous connecter avec d'autres amateurs de plantes.
+                        </p>
                     </div>
                 </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
+
 </div>
