--- a/src/app/compnents/login/login.component.html
+++ b/src/app/compnents/login/login.component.html
@@ -16,7 +16,7 @@
                 <label for="password" class="form-label">Mot de passe :</label>
                 <input type="password" class="form-control" id="password" placeholder="Entrez votre mot de passe" name="password" required />
             </div>
-            <button type="submit" class="submit-btn" >Se connecter <i class="bi bi-box-arrow-in-right" style="margin-left: 10px;"></i></button>
+            <button type="submit" class="submit-btn" [routerLink]="['/ListePlantesAdmin']"  >Se connecter <i class="bi bi-box-arrow-in-right" style="margin-left: 10px;"></i></button>
             <p class="mt-3">
                 <a href="#">Mot de passe oublié ?</a>
             </p>
