component cmnt done

--- a/src/app/compnents/plant-comment/plant-comment.component.html
+++ b/src/app/compnents/plant-comment/plant-comment.component.html
@@ -1,1 +1,67 @@
-<p>plant-comment works!</p>
+<div class="container justify-content-center">
+    <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder="+ Your Name"
+            class="form-control addtxt"> </div>
+    <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder="+ Add a Comment"
+            class="form-control addtxt"> </div>
+    <div class="d-flex justify-content-end btn-add"> <button class="btn">Add Comment...</button> </div>
+        <!--------------------------------------------------------> 
+    <div class="mb-5 mt-2">   
+    <div class="d-flex justify-content-center py-2">
+        <div class="second py-2 px-3"> 
+            <span class="text1">Type your note, and hit enter to add it</span>
+            <div class="d-flex justify-content-between py-1 pt-2">
+                <div>
+                    <img src="https://i.imgur.com/AgAC1Is.jpg" width="18"><span class="text2">Martha</span>
+                </div>
+                <div>
+                    <span class="text3">12</span>
+                    <button class="like"><i class="bi bi-emoji-heart-eyes"></i></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!------------------------------------------------------------------>
+    <div class="d-flex justify-content-center py-2">
+        <div class="second py-2 px-3"> 
+            <span class="text1">Type your note, and hit enter to add it azz zad az jaze
+                azenaze zajk azazb e:za azm! ezkaezjzae ezanez aezan zeazeafnaezf ezafneaf kzekkez akkezf lean
+                aezknezf ezfknez a</span>
+            <div class="d-flex justify-content-between py-1 pt-2">
+                <div>
+                    <img src="https://i.imgur.com/tPvlEdq.jpg" width="18"><span class="text2">Curtis</span>
+                </div>
+                <div>
+                    <span class="text3">44</span>
+                    <button class="like"><i class="bi bi-emoji-heart-eyes"></i></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!------------------------------------------------------------------>
+    <div class="d-flex justify-content-center py-2">
+        <div class="second py-2 px-3"> 
+            <span class="text1">Type your note, and hit enter to add it</span>
+            <div class="d-flex justify-content-between py-1 pt-2">
+                <div><img src="https://i.imgur.com/gishFbz.png" width="18" height="18"><span class="text2">Beth</span></div>
+                <div>
+                    <span class="text3">74</span>
+                    <button class="like"><i class="bi bi-emoji-heart-eyes"></i></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!------------------------------------------------------------------>
+    <!---------->
+    <div class="d-flex justify-content-center py-2">
+        <div class="second py-2 px-3"> 
+            <span class="text1">Type your note, and hit enter to add it</span>
+            <div class="d-flex justify-content-between py-1 pt-2">
+                <div><img src="https://i.imgur.com/gishFbz.png" width="18" height="18"><span class="text2">Beth</span></div>
+                <div>
+                    <span class="text3">40</span>
+                    <button class="like"><i class="bi bi-emoji-heart-eyes"></i></button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
