--- a/src/app/compnents/plant-comment/plant-comment.component.html
+++ b/src/app/compnents/plant-comment/plant-comment.component.html
@@ -5,63 +5,24 @@
             class="form-control addtxt"> </div>
     <div class="d-flex justify-content-end btn-add"> <button class="btn">Add Comment...</button> </div>
         <!--------------------------------------------------------> 
-    <div class="mb-5 mt-2">   
-    <div class="d-flex justify-content-center py-2">
-        <div class="second py-2 px-3"> 
-            <span class="text1">Type your note, and hit enter to add it</span>
-            <div class="d-flex justify-content-between py-1 pt-2">
-                <div>
-                    <img src="https://i.imgur.com/AgAC1Is.jpg" width="18"><span class="text2">Martha</span>
-                </div>
-                <div>
-                    <span class="text3">12</span>
-                    <button class="like"><i class="bi bi-emoji-heart-eyes"></i></button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!------------------------------------------------------------------>
-    <div class="d-flex justify-content-center py-2">
-        <div class="second py-2 px-3"> 
-            <span class="text1">Type your note, and hit enter to add it azz zad az jaze
-                azenaze zajk azazb e:za azm! ezkaezjzae ezanez aezan zeazeafnaezf ezafneaf kzekkez akkezf lean
-                aezknezf ezfknez a</span>
-            <div class="d-flex justify-content-between py-1 pt-2">
-                <div>
-                    <img src="https://i.imgur.com/tPvlEdq.jpg" width="18"><span class="text2">Curtis</span>
-                </div>
-                <div>
-                    <span class="text3">44</span>
-                    <button class="like"><i class="bi bi-emoji-heart-eyes"></i></button>
+    <div class="mb-5 mt-2">  
+        @for(com of tabcom;track $index){
+            <div class="d-flex justify-content-center py-2">
+                <div class="second py-2 px-3"> 
+                    <span class="text1">{{com.message}}</span>
+                    <div class="d-flex justify-content-between py-1 pt-2">
+                        <div>
+                            <img src="https://i.imgur.com/AgAC1Is.jpg" width="18"><span class="text2">{{com.nom}}</span>
+                        </div>
+                        <div>
+                            <span class="text3">{{com.nbLikes}}</span>
+                            <button class="like"><i class="bi bi-emoji-heart-eyes"></i></button>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <!------------------------------------------------------------------>
-    <div class="d-flex justify-content-center py-2">
-        <div class="second py-2 px-3"> 
-            <span class="text1">Type your note, and hit enter to add it</span>
-            <div class="d-flex justify-content-between py-1 pt-2">
-                <div><img src="https://i.imgur.com/gishFbz.png" width="18" height="18"><span class="text2">Beth</span></div>
-                <div>
-                    <span class="text3">74</span>
-                    <button class="like"><i class="bi bi-emoji-heart-eyes"></i></button>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!------------------------------------------------------------------>
-    <!---------->
-    <div class="d-flex justify-content-center py-2">
-        <div class="second py-2 px-3"> 
-            <span class="text1">Type your note, and hit enter to add it</span>
-            <div class="d-flex justify-content-between py-1 pt-2">
-                <div><img src="https://i.imgur.com/gishFbz.png" width="18" height="18"><span class="text2">Beth</span></div>
-                <div>
-                    <span class="text3">40</span>
-                    <button class="like"><i class="bi bi-emoji-heart-eyes"></i></button>
-                </div>
-            </div>
-        </div>
-    </div>
+        } 
+    
+   </div>
+   
 </div>
