--- a/src/app/compnents/list-plants/list-plants.component.css
+++ b/src/app/compnents/list-plants/list-plants.component.css
@@ -5,6 +5,23 @@
     border-left: 7px solid #1C593A;
     color: white;
 }
+.btn{
+    background-color: #f9bc60;
+    color: #004643;
+    font-weight: bold;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+.btn:hover{
+    background-color: #ce9c50;
+    color: #004643;
+}
+.btn:active{
+    transform: scale(0.98);
+}
 
 /***/
 
@@ -53,4 +70,159 @@
     transition: background-color 0.3s ease;
     background-color: #ad9064;
     color: #001e1d;
+}
+/* From Uiverse.io by AmIt-DasIT */ 
+.svg-wrapper {
+  width: 190px;
+  height: 60px;
+  text-align: center;
+  cursor: pointer;
+  z-index: 1000;
+  position: absolute;
+  background-color: #5A8F6C;
+}
+a{
+  position: sticky;
+  top: -115px;
+  z-index: 1000;
+  left: 10px;
+}
+
+.shape {
+  stroke-dasharray: 100 300;
+  stroke-dashoffset: -297;
+  fill: transparent;
+  stroke: #1C593A;
+  stroke-width: 5px;
+  transition: stroke-width 1s, stroke-dashoffset 1s, stroke-dasharray 1s;
+}
+
+.text {
+  font-size: 22px;
+  top: -45px;
+  position: relative;
+  color: #AFE7BB;
+  letter-spacing: 2px;
+}
+
+.svg-wrapper:hover .shape {
+  stroke-width: 2px;
+  stroke-dashoffset: 0;
+  stroke-dasharray: 760;
+}
+
+.svg-wrapper:hover {
+  background-color: #72B58C;
+  transition: 1s;
+}
+
+/*********************************************/
+.range {
+  box-sizing: border-box;
+  height: 80px;
+  width: 380px;
+  background: #f9bc60;
+  border-radius: 10px;
+  padding: 0 65px 0 45px;
+}
+
+.sliderValue {
+  position: relative;
+  width: 100%;
+}
+
+.sliderValue span {
+  position: absolute;
+  height: 45px;
+  width: 45px;
+  transform: translateX(-70%) scale(0);
+  font-weight: 500;
+  top: -40px;
+  line-height: 55px;
+  z-index: 2;
+  color: #fff;
+  transform-origin: bottom;
+  transition: transform 0.3s ease-in-out;
+}
+
+.sliderValue span.show {
+  transform: translateX(-70%) scale(1);
+}
+
+.sliderValue span:after {
+  position: absolute;
+  content: '';
+  height: 100%;
+  width: 100%;
+  background: #664AFF;
+  border: 3px solid #fff;
+  z-index: -1;
+  left: 50%;
+  transform: translateX(-50%) rotate(45deg);
+  border-bottom-left-radius: 50%;
+  box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.1);
+  border-top-left-radius: 50%;
+  border-top-right-radius: 50%;
+}
+
+.field {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  position: relative;
+}
+
+.field .value {
+  position: absolute;
+  font-size: 18px;
+  color: #001e1d;
+  font-weight: 600;
+}
+
+.field .value.left {
+  left: -22px;
+}
+
+.field .value.right {
+  right: -43px;
+}
+
+.range input {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 3px;
+  background: #ddd;
+  border-radius: 5px;
+  outline: none;
+  border: none;
+  z-index: 2222;
+}
+
+.range input::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  width: 20px;
+  height: 20px;
+  background: red;
+  border-radius: 50%;
+  background: #664AFF;
+  border: 1px solid #664AFF;
+  cursor: pointer;
+}
+
+.range input::-moz-range-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  background: red;
+  border-radius: 50%;
+  background: #664AFF;
+  border: 1px solid #664AFF;
+  cursor: pointer;
+}
+
+.range input::-moz-range-progress {
+  background: #664AFF; 
 }
