--- a/src/app/compnents/plant-comment/plant-comment.component.html
+++ b/src/app/compnents/plant-comment/plant-comment.component.html
@@ -1,9 +1,9 @@
 <div class="container justify-content-center">
-    <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder="+ Your Name"
+    <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder=" Your Name" #name
             class="form-control addtxt"> </div>
-    <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder="+ Add a Comment"
+    <div class="d-flex justify-content-center pt-3 pb-2"> <input type="text" name="text" placeholder=" Add a Comment" #comment
             class="form-control addtxt"> </div>
-    <div class="d-flex justify-content-end btn-add"> <button class="btn">Add Comment...</button> </div>
+    <div class="d-flex justify-content-end btn-add"> <button class="btn" (click)="onAddComment(name.value,comment.value)">Add Comment</button> </div>
         <!--------------------------------------------------------> 
     <div class="mb-5 mt-2">  
         @for(com of tabcom;track $index){
@@ -16,7 +16,7 @@
                         </div>
                         <div>
                             <span class="text3">{{com.nbLikes}}</span>
-                            <button class="like"><i class="bi bi-emoji-heart-eyes"></i></button>
+                            <button class="like" (click)="onAddLike()"><i class="bi bi-emoji-heart-eyes"></i></button>
                         </div>
                     </div>
                 </div>
