--- a/src/app/compnents/plant-comment/plant-comment.component.html
+++ b/src/app/compnents/plant-comment/plant-comment.component.html
@@ -16,7 +16,7 @@
                         </div>
                         <div>
                             <span class="text3">{{com.nbLikes}}</span>
-                            <button class="like" (click)="onAddLike()"><i class="bi bi-emoji-heart-eyes"></i></button>
+                            <button class="like" (click)="onAddLike($index)"><i class="bi bi-emoji-heart-eyes"></i></button>
                         </div>
                     </div>
                 </div>
