--- a/src/app/compnents/plant-detail-admin/plant-detail-admin.component.html
+++ b/src/app/compnents/plant-detail-admin/plant-detail-admin.component.html
@@ -38,7 +38,7 @@
                 <a [routerLink]="['descriptionAdmin']" routerLinkActive="active">View Description</a>
             </div>
             <div class="col-md-2 myt">
-                <a [routerLink]="['comments']" routerLinkActive="active">View Comments</a>
+                <a [routerLink]="['commentsAdmin']" routerLinkActive="active">View Comments</a>
             </div>
             
             
