--- a/src/app/compnents/panier/panier.component.html
+++ b/src/app/compnents/panier/panier.component.html
@@ -2,47 +2,31 @@
     <h2 class="cart-header">Shopping Cart <i class="bi bi-cart-check" style="margin-left: 20px;"></i></h2>
     <!-- Total -->
     <div class="cart-total">
-        Total: $89.97
+        Total: {{total | currency:'USD'}}
     </div>
 
     <!-- Liste des articles -->
+    @if (tabcart.length > 0) {
+    @for (plant of tabcart; track plant.id) {
     <div class="cart-item">
-        <img src="logo.jpg" width="120" height="110" style=" border: 1px solid #000;"
-            alt="Product 1">
-        <span class="text-warning fw-bold fs-5">Product 1</span>
-        <span class="text-danger fw-bold fs-5">$29.99</span>
+        <img [src]="plant.images[0]" width="120" height="110" alt="Product 1">
+        <span class="text-dark fw-bold fs-5">{{plant.name}}</span>
+        <span class="text-danger fw-bold fs-5">{{plant.price | currency:'USD'}}</span>
         <div class="btn-group">
-            <button class="btn btn-primary" title="Voir"><i class="bi bi-eye-fill"></i></button>
-            <button class="btn btn-danger" title="Supprimer"><i class="bi bi-trash3-fill"></i></button>
+            <button class="btn btn-primary" routerLink="/plant/{{plant.id}}/description" title="Voir"><i class="bi bi-eye-fill"></i></button>
+            <button class="btn btn-danger" (click)="deleteFromCart(plant)" title="Supprimer"><i class="bi bi-trash3-fill"></i></button>
         </div>
     </div>
-
-    <div class="cart-item">
-        <img src="logo.jpg" width="120" height="110" style=" border: 1px solid #000;"
-            alt="Product 1">
-        <span class="text-warning fw-bold fs-5">Product 2</span>
-        <span class="text-danger fw-bold fs-5">$19.99</span>
-        <div class="btn-group">
-            <button class="btn btn-primary" title="Voir"><i class="bi bi-eye-fill"></i></button>
-            <button class="btn btn-danger" title="Supprimer"><i class="bi bi-trash3-fill"></i></button>
-        </div>
-    </div>
-
-    <div class="cart-item">
-        <img src="logo.jpg" width="120" height="110" style=" border: 1px solid #000;"
-            alt="Product 1">
-
-        <span class="text-warning fw-bold fs-5">Product 3</span>
-        <span class="text-danger fw-bold fs-5">$39.99</span>
-        <div class="btn-group">
-            <button class="btn btn-primary" title="Voir"><i class="bi bi-eye-fill"></i></button>
-            <button class="btn btn-danger" title="Supprimer"><i class="bi bi-trash3-fill"></i></button>
-        </div>
-    </div>
-
     <!-- Boutons d'action -->
     <div class="text-center mt-3 d-flex justify-content-around">
         <button class="btn btn-primary" title="Passer à la caisse">Checkout</button>
-        <button class="btn btn-danger" title="Vider le panier">Clear Cart</button>
+        <button class="btn btn-danger" (click)="clearCart()" title="Vider le panier">Clear Cart</button>
     </div>
+    }
+    }
+    @else {
+        <div class="alert alert-success container text-center" role="alert">
+            No plants in wishlist! visit our <a routerLink="/listePlantes" class="shop" title="Back to shop">shop</a> to add some plants.
+        </div>
+    }
 </div>
