--- a/src/app/compnents/wishlist/wishlist.component.html
+++ b/src/app/compnents/wishlist/wishlist.component.html
@@ -1,6 +1,6 @@
 <a class="back" routerLink="/listePlantes" title="Back to shop"><i class="bi bi-arrow-bar-left"></i></a>
 <div class="cart-container">
-    <h2 class="cart-header">Wishlist <i class="bi bi-cart-check" style="margin-left: 20px;"></i></h2>
+    <h2 class="cart-header">Wishlist <i class="bi bi-bag-heart" style="margin-left: 20px;"></i></h2>
 
 
 @if (tabplants.length > 0) {
