--- a/src/app/compnents/list-plants/list-plants.component.html
+++ b/src/app/compnents/list-plants/list-plants.component.html
@@ -16,9 +16,9 @@
             <div class="col-md-3" style="width: 450px;">
                 <div class="input-group mb-3">
                     <label class="input-group-text" for="funFilterSelect">Filtre Amusant</label>
-                    <select class="form-select" id="funFilterSelect">
-                        <option selected>Choisissez un filtre amusant...</option>
-                        <option value="Toutes">Toutes</option>
+                    <select class="form-select" id="funFilterSelect" (change)="onFilter($event)">
+                        <option selected value="">Choisissez un filtre amusant...</option>
+                        <option value="">Toutes</option>
                         <option value="Facile à vivre">Facile à vivre</option>
                         <option value="Bavarde">Bavarde</option>
                         <option value="Énergique">Énergique</option>
@@ -30,9 +30,9 @@
             <div class="col-md-3" style="width: 400px;">
                 <div class="input-group mb-3">
                     <label class="input-group-text" for="categorySelect">Catégorie</label>
-                    <select class="form-select" id="categorySelect">
-                        <option selected>Choisissez une catégorie...</option>
-                        <option value="Toutes">Toutes</option>
+                    <select class="form-select" id="categorySelect" (change)="onFilter($event)">
+                        <option selected value="">Choisissez une catégorie...</option>
+                        <option value="">Toutes</option>
                         <option value="Plantes fleuries">Plantes fleuries</option>
                         <option value="Cactus et succulentes">Cactus et succulentes</option>
                         <option value="Plantes purificatrices d'air">Plantes purificatrices d'air</option>
@@ -41,9 +41,15 @@
             </div>
 
             <!-- Sort by Value Button -->
-            <div class="col-md-3">
-                <button class="btn mb-3">
-                    <span class="d-flex align-items-center gap-2">Trier par valeur <i class="bi bi-arrow-down-up"></i></span>
+            <div class="col-md-3 col-sm-6 btn-group">
+                <button class="btn mb-3" title="Trier par valeur">
+                    <span class="d-flex align-items-center gap-2">Trier par valeur <i class="bi bi-currency-dollar"></i></span>
+                </button>
+                <button class="btn mb-3" (click)="sortAscending()" title="Trier par valeur croissante">
+                     <i class="bi bi-arrow-up"></i>
+                </button>
+                <button class="btn mb-3" (click)="sortDescending()" title="Trier par valeur décroissante">
+                    <i class="bi bi-arrow-down"></i>
                 </button>
             </div>
 
@@ -77,8 +83,10 @@
         </div>
 
         <div class="section-decriptipon d-flex flex-wrap justify-content-center p-3">
-            @for (plant of plantsFleuries; track plant.id) {
-            <app-plant-item [plant]="plant" class="m-2"></app-plant-item>
+            @for (plant of filteredPlants; track plant.id) {
+                @if (plant.category === "Plantes fleuries") {
+                    <app-plant-item [plant]="plant" class="m-2"></app-plant-item>
+                }
             }
         </div>
     </div>
@@ -91,8 +99,10 @@
         </div>
 
         <div class="section-decriptipon d-flex flex-wrap justify-content-center p-3">
-            @for (plant of plantsCactus; track plant.id) {
-            <app-plant-item [plant]="plant" class="m-2"></app-plant-item>
+            @for (plant of filteredPlants; track plant.id) {
+                @if (plant.category === "Cactus et succulentes") {
+                    <app-plant-item [plant]="plant" class="m-2"></app-plant-item>
+                }
             }
         </div>
     </div>
@@ -105,8 +115,10 @@
         </div>
 
         <div class="section-decriptipon d-flex flex-wrap justify-content-center p-3">
-            @for (plant of plantsPurificatrices; track plant.id) {
-            <app-plant-item [plant]="plant" class="m-2"></app-plant-item>
+            @for (plant of filteredPlants; track plant.id) {
+                @if (plant.category === "Plantes purificatrices d'air") {
+                    <app-plant-item [plant]="plant" class="m-2"></app-plant-item>
+                }
             }
         </div>
     </div>
